# FloraVision-AI

./: .env.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  app.py  main.py  pyproject.toml  requirements.txt
data/: floravision.db
docs/: ARCHITECTURE.md
src/floravision/: __init__.py  graph.py  state.py
src/floravision/detection/: __init__.py  plant_id.py  yolo_detector.py
src/floravision/knowledge/: plants.json  seasons.json  symptoms.json
src/floravision/llm/: __init__.py  base.py  gemini.py  groq.py
src/floravision/nodes/: __init__.py  calendar.py  care_plan.py  causes.py  formatter.py  identification.py  safety.py  seasonal.py  severity.py  symptoms.py
src/floravision/utils/: __init__.py  chat_manager.py  database.py  pdf_report.py  visuals.py
tests/: __init__.py  test_batch.py  test_chat.py  test_database.py  test_integration.py  test_nodes.py
